--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export(activate_model)
+export(deactivate_model)
 export(get_models)
 export(upload_model)
 importFrom(magrittr,"%>%")
