--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,5 +8,6 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 Imports: httr,
-    magrittr
+    magrittr,
+    purrr
 RoxygenNote: 6.1.0
