--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(activate_model)
 export(deactivate_model)
+export(delete_model)
 export(get_models)
 export(upload_model)
 importFrom(magrittr,"%>%")
