--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,12 +4,13 @@ Version: 0.0.0.9000
 Authors@R: person("Alexander", "Lemm", email = "alex23lemm@gmail.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 Depends: R (>= 3.5.1)
-License: What license is it under?
+License: GPL-2
 URL: https://github.com/alex23lemm/zementisr
 BugReports: https://github.com/alex23lemm/zementisr/issues
 Encoding: UTF-8
 LazyData: true
 Imports: httr,
     magrittr,
-    purrr
+    purrr,
+    jsonlite
 RoxygenNote: 6.1.0
