Store upload_model() in a separate .R file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ export(apply_model)
 export(deactivate_model)
 export(delete_model)
 export(get_models)
+export(upload_model)
 importFrom(magrittr,"%>%")
