upload_model() accepts XMLNode objects as input

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ LazyData: true
 Imports: httr,
     magrittr,
     purrr,
-    jsonlite
+    jsonlite,
+    XML
 RoxygenNote: 6.1.0
 Suggests: testthat,
     rpart,
