--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(apply_model)
 export(apply_model_batch)
 export(deactivate_model)
 export(delete_model)
+export(get_model_properties)
 export(get_models)
 export(upload_model)
 importFrom(magrittr,"%>%")
