Add first version of the quickstart vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,4 +17,7 @@ Imports: httr,
 RoxygenNote: 6.1.0
 Suggests: testthat,
     rpart,
-    pmml
+    pmml,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
