--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.1.0
 Authors@R: person("Alexander", "Lemm", email = "alex23lemm@gmail.com", role = c("aut", "cre"))
 Description: zementisr is an R client for the Zementis Server API. Zementis Server 
     is an execution engine for PMML models which also comes with model management
-    capabilities. Using zementisr, data scientists can deploy PMML models,
+    capabilities. Using zementisr, data scientists can deploy PMML models to Zementis Server,
     predict new values by sending data to the server and manage the entire PMML model
     life cycle without leaving their preferred R development environment. 
 Depends: R (>= 3.5.0)
