--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: zementisr
 Title: R client for the Zementis Server API
-Version: 0.2.0
+Version: 0.2.0.9999
 Authors@R: person("Alexander", "Lemm", email = "alex23lemm@gmail.com", role = c("aut", "cre"))
 Description: zementisr is an R client for the Zementis Server API. Zementis Server 
     is an execution engine for PMML models which also comes with model management
@@ -17,7 +17,8 @@ Imports: httr,
     magrittr,
     purrr,
     jsonlite,
-    XML
+    XML,
+    dplyr
 RoxygenNote: 6.1.0
 Suggests:
     testthat,
@@ -25,7 +26,6 @@ Suggests:
     pmml,
     knitr,
     rmarkdown,
-    dplyr,
     covr,
     tibble
 VignetteBuilder: knitr
