--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(apply_model_batch)
 export(deactivate_model)
 export(delete_model)
 export(download_model)
+export(get_model_metrics)
 export(get_model_properties)
 export(get_models)
 export(upload_model)
