Rename apply_model_* functions to predict_pmml_*

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,13 @@
 
 export("%>%")
 export(activate_model)
-export(apply_model)
-export(apply_model_batch)
 export(deactivate_model)
 export(delete_model)
 export(download_model)
 export(get_model_metrics)
 export(get_model_properties)
 export(get_models)
+export(predict_pmml)
+export(predict_pmml_batch)
 export(upload_model)
 importFrom(magrittr,"%>%")
