--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: zementisr
 Title: R client for the Zementis Server API
-Version: 0.4.2
+Version: 0.5.0
 Authors@R: person("Alexander", "Lemm", email = "alex23lemm@gmail.com", role = c("aut", "cre"))
-Description: zementisr is an R client for the Zementis Server API. Zementis Server 
+Description: R client for the Zementis Server API. Zementis Server 
     is an execution engine for PMML models which also comes with model management
     capabilities. Using zementisr, data scientists can deploy PMML models to Zementis Server,
     predict new values by sending data to the server and manage the entire PMML model
